tests/snapshots/parser__comparisons__non_associative_chain.snap
---
source: tests/parser.rs
expression: "parse(\"1 < 2 < 3\")"
---
Err(
    ParseError {
        message: "chained comparison is not allowed; use `and` to combine",
        span: Span {
            start: 6,
            end: 7,
        },
    },
)
