tests/snapshots/parser__comparisons__not_eq.snap
---
source: tests/parser.rs
expression: "parse(\"1 != 2\")"
---
Ok(
    [
        Expr(
            Binary {
                op: NotEq,
                lhs: Int(
                    1,
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                rhs: Int(
                    2,
                    Span {
                        start: 5,
                        end: 6,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 6,
                },
            },
        ),
    ],
)
