tests/snapshots/parser__comparisons__precedence_arith_in_cmp.snap
---
source: tests/parser.rs
expression: "parse(\"1 + 2 < 3 * 4\")"
---
Ok(
    [
        Expr(
            Binary {
                op: Lt,
                lhs: Binary {
                    op: Add,
                    lhs: Int(
                        1,
                        Span {
                            start: 0,
                            end: 1,
                        },
                    ),
                    rhs: Int(
                        2,
                        Span {
                            start: 4,
                            end: 5,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                rhs: Binary {
                    op: Mul,
                    lhs: Int(
                        3,
                        Span {
                            start: 8,
                            end: 9,
                        },
                    ),
                    rhs: Int(
                        4,
                        Span {
                            start: 12,
                            end: 13,
                        },
                    ),
                    span: Span {
                        start: 8,
                        end: 13,
                    },
                },
                span: Span {
                    start: 0,
                    end: 13,
                },
            },
        ),
    ],
)
